# KartoffelMotor

./: .gitignore  CMakeLists.txt  README.md  TODO.md
Engine/Core/include/: EngineGUI.h  Window.h  gui_tools.h
Engine/Core/src/: EngineGUI.cpp  Window.cpp
Engine/include/: Animation.h  AssetManager.h  AudioManager.h  Camera.h  CollisionDetection.h  FontManager.h  ImGuiExample.h  Input.h  InputManager.h  LevelEditorTool.h  ParticleSystem.h  PhysicsEngine.h  Sound.h  Sprite.h  Texture.h  TextureManager.h  TileMap.h  Timer.h  WindowController.h
Engine/src/: Animation.cpp  AssetManager.cpp  AudioManager.cpp  Camera.cpp  CollisionDetection.cpp  FontManager.cpp  ImGuiExample.cpp  Input.cpp  InputManager.cpp  LevelEditorTool.cpp  ParticleSystem.cpp  PhysicsEngine.cpp  Sound.cpp  Sprite.cpp  Texture.cpp  TextureManager.cpp  TileMap.cpp  Timer.cpp  WindowController.cpp
include/: Game.h  Player.h
src/: Game.cpp  Player.cpp  main.cpp
